<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/module1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c203" />

    <TextView
        android:id="@+id/module2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c206" />

    <TextView
        android:id="@+id/module3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c218" />

    <TextView
        android:id="@+id/module4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c235" />

    <TextView
        android:id="@+id/module5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c346" />

    <Button
        android:id="@+id/summaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/summary" />
</LinearLayout>